<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.rodrigo.projetoandroidturma2.HelpActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodrigo_rolim_veras"/>
    <TextView
        android:id="@+id/text_ra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ra_1694111"/>
    <TextView
        android:id="@+id/text_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curso_engenharia_de_software"/>
    <Button
        android:id="@+id/button_back"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        />
</LinearLayout>
